syntax = "proto3";

service UserService {
    rpc getUsers(Empty) returns (Users) {}
    rpc getUser(UserId) returns (User) {}
    rpc create(User) returns (User) {}
    rpc update(User) returns (User) {}
    rpc deleteUser(UserId) returns (Empty) {}
    rpc deleteUsers(Empty) returns (Empty) {}
}

message Empty {}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string date_of_birth = 4;
}

message Users {
    repeated User users = 1;
}

message UserId {
    string id = 1;
}
